# Snake_cmd

./: CMakeLists.txt  README.md
inc/: food.hpp  snake.hpp  snake_game.hpp  wall.hpp
inc/states/: basic_state.hpp  gameover_state.hpp  mainmenu_state.hpp  play_state.hpp
inc/utils/: menu.hpp
levels/: level1.txt  level2.txt  level3.txt  level4.txt
src/: food.cpp  main.cpp  snake.cpp  snake_game.cpp  wall.cpp
src/states/: gameover_state.cpp  mainmenu_state.cpp  play_state.cpp
